* stylesheets/base.css   * Moved tab styles to tab.css   * In print section, removed #print_header rules (no longer exists in markup)   * (table): Removed default styles width:100% and border-collapse:collapse
* stylesheets/fixed-pane.css
  * Moved fixed pane styles here from public/FixedPane.css (with a few
    changes, the main one being that the control buttons are positioned
    absolutely in the title bar instead of floating)

* stylesheets/tab.css
  * Moved tab styles here from base.css

--- a/apps/web/tripplanner/branches/dojo/tripplanner/public/stylesheets/base.css
+++ b/apps/web/tripplanner/branches/dojo/tripplanner/public/stylesheets/base.css
@@ -1,4 +1,3 @@
-/* DEV */
 html, body, table, td, tr, form {
   padding: 0;
   margin: 0;
@@ -14,10 +13,6 @@ body, td {
   color: black;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
 td { vertical-align: top; }
 
 img { border: 0; }
@@ -25,8 +20,10 @@ img { border: 0; }
 a { color: #46d; }
 a:hover { color: orange; }
 
+
 .clear { clear: both; }
 .first_p { margin-top: 0; }
+
 
 /* Top level layout */
 #header, #bar, #content {
@@ -49,10 +46,12 @@ a:hover { color: orange; }
   background: white;
 }
 
+
 /* Content Column Layout */
 #col-a {
   float: left;
   width: 30%;
+  position: relative;
 }
 #col-b {
   float: right;
@@ -62,7 +61,7 @@ a:hover { color: orange; }
 
 
 /* Masthead */
-#masthead { 
+#masthead {
   float: left;
   width: 150px;
 }
@@ -82,51 +81,6 @@ a:hover { color: orange; }
 /* Input */
 #input_container {
   margin-left: 155px;
-}
-/* Tab Buttons */
-.tab-buttons {
-  list-style-type: none;
-  list-style-image: none;
-  list-style-position: outside;
-  margin: 0;
-  padding: 0;
-  background: white;
-}
-.tab-button {
-  display: inline; /*-moz-inline-stack */
-  margin: 0;
-  margin-right: 1px;
-  padding: 0;
-  background: #99b3cc;
-  border: 1px solid gray;
-  border-bottom: 0;  
-}
-.selected-tab-button {
-  background: white;
-  padding-bottom: 1px;
-  border-bottom: 0;
-}
-/* Tab Button Links */
-.tab-button a {
-  outline: none; /* Add onfocus=this.blur() for IE??? */
-  padding: 0 5px;
-  color: white;
-  font-weight: bold;
-}
-.selected-tab-button a {
-  color: black;
-  text-decoration: none;
-}
-/* Tab Contents */
-.tab-contents {
-  padding: 5px;
-  border: 1px solid gray;
-}
-.tab-content {
-  display: none;
-}
-.selected-tab-content {
-  display: block;
 }
 /* Input Controls */
 #q {
@@ -277,8 +231,10 @@ a:hover { color: orange; }
 .end {
   color: #fd766a;
 }
-.summary, .directions {
+table.summary, table.directions {
   border: 1px solid gray;
+  width: 100%;
+  border-collapse: collapse;
 }
 .summary div {
   border-bottom: 1px solid gray;
@@ -310,9 +266,6 @@ a:hover { color: orange; }
 @media print {
   html, body, #display_container {
     overflow: visible;
-  }
-  #print_header {
-    display: block;
   }
   #links, #input, #reverse_div, #map_menu, #ads_pane {
     display: none;
